[feat] support constant schedules
