# OpenApi.yml
@@ -172,10 +172,6 @@ components:
           type: string
           description: 終了日時
           example: "2023-08-07T02:00:00.000Z"
-        allday:
-          type: boolean
-          description: 終日フラグ
-          example: false
         tags:
           type: array
           items:
@@ -188,6 +184,8 @@ components:
             type: string
           description: プロパティ
           example: ["dayFlexible", "notImportant"]
+        constant:
+          $ref: '#/components/schemas/Constant'
         isPublic:
           type: boolean
           description: 公開フラグ
@@ -219,10 +217,6 @@ components:
           type: string
           description: 終了日時
           example: "2023-08-07T02:00:00.000Z"
-        allday:
-          type: boolean
-          description: 終日フラグ
-          example: false
         tags:
           type: array
           items:
@@ -235,6 +229,8 @@ components:
             type: string
           description: プロパティ
           example: ["dayFlexible", "notImportant"]
+        constant:
+          $ref: '#/components/schemas/Constant'
         isPublic:
           type: boolean
           description: 公開フラグ
@@ -258,10 +254,6 @@ components:
           type: string
           description: 終了日時
           example: "2023-08-07T02:00:00.000Z"
-        allday:
-          type: boolean
-          description: 終日フラグ
-          example: false
         tags:
           type: array
           items:
@@ -274,11 +266,27 @@ components:
             type: string
           description: プロパティ
           example: ["dayFlexible", "notImportant"]
+        constant:
+          $ref: '#/components/schemas/Constant'
         isPublic:
           type: boolean
           description: 公開フラグ
           example: false
-
+    Constant:
+      type: object
+      properties:
+        startDate:
+          type: string
+          description: 期間の開始日時
+          example: "2023-08-01T01:00:00.000Z"
+        endDate:
+          type: string
+          description: 期間の終了日時
+          example: "2023-08-31T02:00:00.000Z"
+        intervalDays:
+          type: number
+          description: 間隔の日数
+          example: 7
   securitySchemes:
     Bearer:
       type: http
