# api/controller/response.go
@@ -2,22 +2,28 @@ package controller
 
 import "time"
 
+type ConstantResponse struct {
+	StartDate    time.Time `json:"startDate"`
+	EndDate      time.Time `json:"endDate"`
+	IntervalDays int       `json:"intervalDays"`
+}
+
 type PostScheduleResponse struct {
 	ScheduleID string `json:"scheduleID"`
 }
 
 type GetScheduleResponse struct {
-	ScheduleID  string    `json:"scheduleID"`
-	Title       string    `json:"title"`
-	Description string    `json:"description"`
-	StartDate   time.Time `json:"startDate"`
-	EndDate     time.Time `json:"endDate"`
-	Allday      bool      `json:"allday"`
-	Tags        []string  `json:"tags"`
-	Properties  []string  `json:"properties"`
-	IsPublic    bool      `json:"isPublic"`
-	CreatedAt   time.Time `json:"createdAt"`
-	UpdatedAt   time.Time `json:"updatedAt"`
+	ScheduleID  string            `json:"scheduleID"`
+	Title       string            `json:"title"`
+	Description string            `json:"description"`
+	StartDate   time.Time         `json:"startDate"`
+	EndDate     time.Time         `json:"endDate"`
+	Tags        []string          `json:"tags"`
+	Properties  []string          `json:"properties"`
+	Constant    *ConstantResponse `json:"constant"`
+	IsPublic    bool              `json:"isPublic"`
+	CreatedAt   time.Time         `json:"createdAt"`
+	UpdatedAt   time.Time         `json:"updatedAt"`
 }
 
 type GetScheduleListResponse struct {
